<resources>
    <string name="app_name">Pathfinder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="route_type_list">
        <item>Best Route</item>
        <item>Fewest Transfers</item>
        <item>Less Walking</item>
    </string-array>
    <string-array name="route_mode_list">
        <item>Bus</item>
        <item>Subway</item>
        <item>Train</item>
        <item>Tram/Light rail</item>
    </string-array>

    <string-array name="cached_route_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="zoom_level_list">
        <item>House</item>
        <item>Street</item>
        <item>Neighborhood</item>
        <item>City</item>
        <item>Region</item>
    </string-array>

    <string-array name="search_type_list">
        <item>Leaving now</item>
        <item>Leaving at...</item>
        <item>Arriving at...</item>
    </string-array>

    <string-array name="highlight_color_list">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Gray</item>
        <item>Magenta</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="map_details_fare">"Fare: "</string>
    <string name="map_details_walkingtime">"Walking time: "</string>
    <string name="route_details_stops">"    Stops: "</string>
    <string name="route_detail_depart">"Depart: "</string>
    <string name="route_detail_arrive">"Arrive: "</string>
    <string name="search_start_content">Enter starting address</string>
    <string name="search_end_content">Enter destination address</string>
    <string name="search_spinner_content">Select arrival/leaving time</string>
    <string name="search_date_content">Route Date</string>
    <string name="search_time_content">Route Time</string>
    <string name="map_details_cardview_content">Route Details</string>
    <string name="route_details_cardview_content">Detailed steps in a route</string>
    <string name="share_from">"From: "</string>
    <string name="share_to">"To: "</string>
    <string name="share_depart">"Depature time: "</string>
    <string name="share_arrive">"Arrival time: "</string>
    <string name="share_route">Route to...</string>
    <string name="share_share_via">Share via</string>
    <string name="map_api_key">0vAX8Xe9xjo5gkFNEEIH7KdHkNZNJWNnsjUPKkQ</string>
    <string name="nav_menu_project">Udacity Capstone Project</string>
    <string name="nav_menu_app">Public transportation app</string>
    <string name="route_instructions">Route Instructions</string>
    <string name="route_distance">Distance</string>
    <string name="route_duration">Duration</string>
    <string name="route_travel">Travel Instructions</string>
    <string name="widget_prev">Previous route</string>
    <string name="widget_start_addr">Start Address</string>
    <string name="widget_content_start">Start Address</string>
    <string name="widget_end_addr">End Address</string>
    <string name="widget_content_end">End Address</string>
    <string name="widget_next">Next</string>
    <string name="search_going_to">Going to...</string>
    <string name="search_time">Time</string>
    <string name="search_date">Date</string>
    <string name="detail_start_end">Start Time - End Time</string>
    <string name="detail_duration">Trip Duration</string>
    <string name="detail_cost">Trip cost</string>
    <string name="detail_walking_time">Walking Time</string>
    <string name="map_details_not_avail">Not Available</string>
</resources>
