<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.MapSearchFragment"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startEditText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:lines="1"
            android:nextFocusForward="@+id/endEditText"
            android:contentDescription="@string/search_start_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endEditText"
            android:hint="@string/search_going_to"
            android:layout_below="@+id/startEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:lines="1"
            android:nextFocusForward="@+id/leavingSpinner"
            android:contentDescription="@string/search_end_content"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leavingSpinner"
            android:entries="@array/search_type_list"
            android:layout_below="@+id/endEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/search_spinner_content"
            android:nextFocusForward="@+id/timeBtn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_time"
            android:id="@+id/timeBtn"
            android:layout_weight="1"
            android:layout_below="@+id/leavingSpinner"
            android:layout_toLeftOf="@+id/dateBtn"
            android:layout_toStartOf="@+id/dateBtn"
            android:contentDescription="@string/search_time_content"
            android:nextFocusForward="@+id/dateBtn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_date"
            android:id="@+id/dateBtn"
            android:layout_weight="1"
            android:layout_below="@+id/leavingSpinner"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/date_btn_margin"
            android:layout_marginEnd="@dimen/date_btn_margin"
            android:contentDescription="@string/search_date_content"
            android:nextFocusForward="@+id/startEditText"
            />
    </RelativeLayout>
</LinearLayout>
