<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:contentDescription="@string/map_details_cardview_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.android.pathfinder.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/detail_start_end"
            android:id="@+id/trip_textview"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:font = "times.ttf"/>

        <com.example.android.pathfinder.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/detail_duration"
            android:id="@+id/trip_duration_textview"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:font = "times.ttf"/>

        <com.example.android.pathfinder.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/detail_cost"
            android:id="@+id/trip_cost_textview"
            android:layout_below="@+id/trip_textview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:font = "times.ttf"/>

        <com.example.android.pathfinder.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/detail_walking_time"
            android:id="@+id/walking_time_textview"
            android:layout_below="@+id/trip_duration_textview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:font = "times.ttf"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
